[gd_scene load_steps=34 format=3 uid="uid://bmkacr6ktnxpn"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1_2amdu"]
[ext_resource type="Script" path="res://scripts/FPSCamera.gd" id="2_0mnq6"]
[ext_resource type="Script" path="res://scripts/Label_HeldItem.gd" id="2_lgeya"]
[ext_resource type="PackedScene" uid="uid://dl715wjeelbk7" path="res://scenes/hotplate.tscn" id="4_wrbrn"]
[ext_resource type="PackedScene" uid="uid://csia40gwyiojh" path="res://scenes/sink.tscn" id="5_e876j"]
[ext_resource type="Script" path="res://scripts/Player.gd" id="5_vpoxk"]
[ext_resource type="PackedScene" uid="uid://dq2jylpvjtxxd" path="res://scenes/teapot.tscn" id="6_rjdbd"]
[ext_resource type="PackedScene" uid="uid://byix6wkws661r" path="res://scenes/tea_cup.tscn" id="7_72l4u"]
[ext_resource type="PackedScene" uid="uid://37lf2egblnd6" path="res://scenes/tea_kettle.tscn" id="8_7hc52"]
[ext_resource type="Material" uid="uid://dkupiqwv6rf2g" path="res://materials/floor.tres" id="8_g5q31"]
[ext_resource type="PackedScene" uid="uid://coekka8bmqu1g" path="res://scenes/counter.tscn" id="8_y4nji"]
[ext_resource type="Material" uid="uid://6k0tm3s1rqfg" path="res://materials/wall.tres" id="9_3ljx8"]
[ext_resource type="PackedScene" uid="uid://c3gcqtsi7lxal" path="res://scenes/tea_tree.tscn" id="9_5djjh"]
[ext_resource type="PackedScene" uid="uid://bsrcc8a30vt1p" path="res://scenes/leaf_crusher.tscn" id="10_nefb5"]
[ext_resource type="PackedScene" uid="uid://csh63b2jdudyg" path="res://scenes/oxidizer.tscn" id="11_kmpjb"]
[ext_resource type="PackedScene" uid="uid://dx0xtqq8edqdy" path="res://scenes/crush_leaf_tray.tscn" id="16_371e4"]
[ext_resource type="AudioStream" uid="uid://dk1sp0y2gnma6" path="res://audio/use_boop.wav" id="17_1jiw0"]
[ext_resource type="PackedScene" uid="uid://dwhkm61peqh3x" path="res://scenes/jukebox.tscn" id="17_28vpb"]
[ext_resource type="PackedScene" uid="uid://bd1jkdslg77aa" path="res://scenes/leaf_basket.tscn" id="17_lh7w1"]
[ext_resource type="AudioStream" uid="uid://ckmidbwkf2ebo" path="res://audio/ping_boop.wav" id="18_np0mv"]
[ext_resource type="AudioStream" uid="uid://blnsneoyfocv6" path="res://audio/bad_boop.wav" id="19_pulcn"]
[ext_resource type="PackedScene" uid="uid://bhvf6gyglptto" path="res://scenes/ingredient.tscn" id="20_6w77y"]
[ext_resource type="PackedScene" uid="uid://clunbhfm3m663" path="res://scenes/cubby_shelf.tscn" id="23_up8mt"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_jtfon"]
size = Vector2(10, 10)

[sub_resource type="LabelSettings" id="LabelSettings_vq3ps"]
font_size = 50

[sub_resource type="Environment" id="Environment_ib77m"]
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_energy = 3.47

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_lfdx5"]

[sub_resource type="SphereMesh" id="SphereMesh_8knmf"]
radius = 0.1
height = 0.2

[sub_resource type="QuadMesh" id="QuadMesh_pamd4"]
material = ExtResource("8_g5q31")
uv2_padding = 0.88
size = Vector2(10, 10)
orientation = 1

[sub_resource type="QuadMesh" id="QuadMesh_h7fqm"]
material = ExtResource("9_3ljx8")
size = Vector2(5, 5)

[sub_resource type="QuadMesh" id="QuadMesh_1io6o"]
material = ExtResource("9_3ljx8")
size = Vector2(4, 5)

[sub_resource type="QuadMesh" id="QuadMesh_efst4"]
material = ExtResource("8_g5q31")
size = Vector2(2, 1)
orientation = 1

[sub_resource type="QuadMesh" id="QuadMesh_5ks6k"]
material = ExtResource("9_3ljx8")
size = Vector2(1, 5)
orientation = 0

[node name="Node3D" type="Node3D"]
script = ExtResource("1_2amdu")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Control" type="AspectRatioContainer" parent="HUD"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
ratio = 1.7

[node name="Crosshair" type="TextureRect" parent="HUD/Control"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 18.37
texture = SubResource("PlaceholderTexture2D_jtfon")
stretch_mode = 3

[node name="Label_HeldItem" type="Label" parent="HUD/Control"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "-"
label_settings = SubResource("LabelSettings_vq3ps")
horizontal_alignment = 2
script = ExtResource("2_lgeya")

[node name="MousePeek" type="GridContainer" parent="HUD/Control"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
columns = 2

[node name="PingLabelStatic" type="Label" parent="HUD/Control/MousePeek"]
layout_mode = 2
text = "Left Click: "
label_settings = SubResource("LabelSettings_vq3ps")

[node name="PingLabel" type="Label" parent="HUD/Control/MousePeek"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "-"
label_settings = SubResource("LabelSettings_vq3ps")
horizontal_alignment = 2
script = ExtResource("2_lgeya")

[node name="UseLabelStatic" type="Label" parent="HUD/Control/MousePeek"]
layout_mode = 2
text = "Right Click: "
label_settings = SubResource("LabelSettings_vq3ps")

[node name="UseLabel" type="Label" parent="HUD/Control/MousePeek"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "-"
label_settings = SubResource("LabelSettings_vq3ps")
horizontal_alignment = 2
script = ExtResource("2_lgeya")

[node name="Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.742981, 0.669312, 0, -0.669312, 0.742981, 0, 5.34098, 0)

[node name="Player" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 3)
collision_layer = 4
collision_mask = 3
script = ExtResource("5_vpoxk")

[node name="Camera" type="Camera3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.454487, 0)
environment = SubResource("Environment_ib77m")
script = ExtResource("2_0mnq6")

[node name="PlayerCollider" type="CollisionShape3D" parent="Player"]
shape = SubResource("CapsuleShape3D_lfdx5")

[node name="Hand" type="MeshInstance3D" parent="Player"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.417331, -0.169522, -0.591021)
mesh = SubResource("SphereMesh_8knmf")

[node name="HeldItem" type="MeshInstance3D" parent="Player/Hand"]

[node name="UseBoop" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource("17_1jiw0")

[node name="PingBoop" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource("18_np0mv")

[node name="BadBoop" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource("19_pulcn")

[node name="FrontOfHouse" type="Node3D" parent="."]

[node name="Floor" type="MeshInstance3D" parent="FrontOfHouse"]
mesh = SubResource("QuadMesh_pamd4")

[node name="Ceiling" type="MeshInstance3D" parent="FrontOfHouse"]
transform = Transform3D(1, 0, 0, 0, -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 3, 0)
mesh = SubResource("QuadMesh_pamd4")
skeleton = NodePath("../..")

[node name="Wall_1" type="MeshInstance3D" parent="FrontOfHouse"]
transform = Transform3D(1, 0, 0, 0, -1, 8.74228e-08, 0, -8.74228e-08, -1, 2.5, 2.5, 5)
mesh = SubResource("QuadMesh_h7fqm")

[node name="Wall_6" type="MeshInstance3D" parent="FrontOfHouse"]
transform = Transform3D(1, 0, 0, 0, -1, 8.74228e-08, 0, -8.74228e-08, -1, -2.5, 2.5, 5)
mesh = SubResource("QuadMesh_h7fqm")

[node name="Wall_2" type="MeshInstance3D" parent="FrontOfHouse"]
transform = Transform3D(-4.37114e-08, -8.74228e-08, -1, 0, -1, 8.74228e-08, -1, 3.82137e-15, 4.37114e-08, 5, 2.5, 2.5)
mesh = SubResource("QuadMesh_h7fqm")

[node name="Wall_7" type="MeshInstance3D" parent="FrontOfHouse"]
transform = Transform3D(-4.37114e-08, -8.74228e-08, -1, 0, -1, 8.74228e-08, -1, 3.82137e-15, 4.37114e-08, 5, 2.5, -2.5)
mesh = SubResource("QuadMesh_h7fqm")

[node name="Wall_3" type="MeshInstance3D" parent="FrontOfHouse"]
transform = Transform3D(1.31134e-07, 8.74228e-08, 1, 0, -1, 8.74228e-08, 1, -1.14641e-14, -1.31134e-07, -5, 2.5, 2.5)
mesh = SubResource("QuadMesh_h7fqm")

[node name="Wall_8" type="MeshInstance3D" parent="FrontOfHouse"]
transform = Transform3D(1.31134e-07, 8.74228e-08, 1, 0, -1, 8.74228e-08, 1, -1.14641e-14, -1.31134e-07, -5, 2.5, -2.5)
mesh = SubResource("QuadMesh_h7fqm")

[node name="Wall_4" type="MeshInstance3D" parent="FrontOfHouse"]
transform = Transform3D(-1, 7.64273e-15, 8.74226e-08, 0, -1, 8.74228e-08, 8.74226e-08, 8.74228e-08, 1, -3, 2.49967, -5)
mesh = SubResource("QuadMesh_1io6o")

[node name="Wall_5" type="MeshInstance3D" parent="FrontOfHouse"]
transform = Transform3D(-1, 7.64273e-15, 8.74226e-08, 0, -1, 8.74228e-08, 8.74226e-08, 8.74228e-08, 1, 3, 2.49967, -5)
mesh = SubResource("QuadMesh_1io6o")

[node name="Counter_0" parent="FrontOfHouse" instance=ExtResource("8_y4nji")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -3.5, 0, -4.5)

[node name="Counter_1" parent="FrontOfHouse" instance=ExtResource("8_y4nji")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -2.5, 0, -4.5)

[node name="Counter_2" parent="FrontOfHouse" instance=ExtResource("8_y4nji")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, -1.5, 0, -4.5)

[node name="Counter_3" parent="FrontOfHouse" instance=ExtResource("8_y4nji")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 1.5, 0, -4.5)

[node name="Counter_4" parent="FrontOfHouse" instance=ExtResource("8_y4nji")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 2.5, 0, -4.5)

[node name="Counter_5" parent="FrontOfHouse" instance=ExtResource("8_y4nji")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 3.5, 0, -4.5)

[node name="Counter_6" parent="FrontOfHouse" instance=ExtResource("8_y4nji")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 4.5, 0, -4.5)

[node name="Counter_7" parent="FrontOfHouse" instance=ExtResource("8_y4nji")]
transform = Transform3D(1, 0, 1.74846e-07, 0, 1, 0, -1.74846e-07, 0, 1, 2.5, 0, -1.5)

[node name="Counter_8" parent="FrontOfHouse" instance=ExtResource("8_y4nji")]
transform = Transform3D(1, 0, 1.74846e-07, 0, 1, 0, -1.74846e-07, 0, 1, 1.5, 0, -1.5)

[node name="Counter_9" parent="FrontOfHouse" instance=ExtResource("8_y4nji")]
transform = Transform3D(1, 0, 1.74846e-07, 0, 1, 0, -1.74846e-07, 0, 1, 0.5, 0, -1.5)

[node name="Counter_10" parent="FrontOfHouse" instance=ExtResource("8_y4nji")]
transform = Transform3D(1, 0, 1.74846e-07, 0, 1, 0, -1.74846e-07, 0, 1, -0.5, 0, -1.5)

[node name="Counter_11" parent="FrontOfHouse" instance=ExtResource("8_y4nji")]
transform = Transform3D(1, 0, 1.74846e-07, 0, 1, 0, -1.74846e-07, 0, 1, -1.5, 0, -1.5)

[node name="Counter_12" parent="FrontOfHouse" instance=ExtResource("8_y4nji")]
transform = Transform3D(1, 0, 1.74846e-07, 0, 1, 0, -1.74846e-07, 0, 1, -2.5, 0, -1.5)

[node name="Counter_13" parent="FrontOfHouse" instance=ExtResource("8_y4nji")]
transform = Transform3D(1, 0, 1.74846e-07, 0, 1, 0, -1.74846e-07, 0, 1, -3.5, 0, -1.5)

[node name="Counter_14" parent="FrontOfHouse" instance=ExtResource("8_y4nji")]
transform = Transform3D(1, 0, 1.74846e-07, 0, 1, 0, -1.74846e-07, 0, 1, -4.5, 0, -1.5)

[node name="Sink" parent="FrontOfHouse" instance=ExtResource("5_e876j")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -4.5, 0, -4.5)

[node name="Hotplate" parent="FrontOfHouse" instance=ExtResource("4_wrbrn")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 1.05, -4.5)

[node name="TeaMakingLabel" type="Label3D" parent="FrontOfHouse"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 4.97836, 1.46013, -2.10144)
text = "Making a Cup of Tea:
- Fill Kettle with Water
- Heat Kettle on the Stove
- Use a Tea Brick on Teapot
- Pour Hot Water into Teapot
- Pour Tea into Tea Cup"

[node name="ControlsLabel" type="Label3D" parent="FrontOfHouse"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0.958798, 1.99661, 4.94626)
text = "WASD - walk
Left Click - interact/pickup item/put down item
Right Click - use held item
f11 - toggle fullscreen
esc - gain control of mouse cursor
alt+f4 - close the game"

[node name="BackOfHouse" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -11)

[node name="Floor" type="MeshInstance3D" parent="BackOfHouse"]
mesh = SubResource("QuadMesh_pamd4")
skeleton = NodePath("../..")

[node name="Ceiling" type="MeshInstance3D" parent="BackOfHouse"]
transform = Transform3D(1, 0, 0, 0, -1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 3, 0)
mesh = SubResource("QuadMesh_pamd4")
skeleton = NodePath("../..")

[node name="Wall_0" type="MeshInstance3D" parent="BackOfHouse"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5, 2.5, -2)
mesh = SubResource("QuadMesh_h7fqm")

[node name="Wall_1" type="MeshInstance3D" parent="BackOfHouse"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 2.5, -2)
mesh = SubResource("QuadMesh_h7fqm")

[node name="Wall_2" type="MeshInstance3D" parent="BackOfHouse"]
transform = Transform3D(-4.37114e-08, -8.74228e-08, -1, 0, -1, 8.74228e-08, -1, 3.82137e-15, 4.37114e-08, 3, 2.5, 2.5)
mesh = SubResource("QuadMesh_h7fqm")

[node name="Wall_7" type="MeshInstance3D" parent="BackOfHouse"]
transform = Transform3D(-4.37114e-08, -8.74228e-08, -1, 0, -1, 8.74228e-08, -1, 3.82137e-15, 4.37114e-08, 3, 2.5, -2.5)
mesh = SubResource("QuadMesh_h7fqm")

[node name="Wall_3" type="MeshInstance3D" parent="BackOfHouse"]
transform = Transform3D(4.37114e-08, -3.82137e-15, 1, -8.74228e-08, -1, 0, 1, -8.74228e-08, -4.37114e-08, -5, 2.5, 2.5)
mesh = SubResource("QuadMesh_h7fqm")

[node name="Wall_6" type="MeshInstance3D" parent="BackOfHouse"]
transform = Transform3D(4.37114e-08, -3.82137e-15, 1, -8.74228e-08, -1, 0, 1, -8.74228e-08, -4.37114e-08, -5, 2.5, -2.5)
mesh = SubResource("QuadMesh_h7fqm")

[node name="Wall_4" type="MeshInstance3D" parent="BackOfHouse"]
transform = Transform3D(1, -1.52855e-14, -1.74845e-07, 0, -1, 8.74228e-08, -1.74845e-07, -8.74228e-08, -1, -3, 2.49967, 5.00859)
mesh = SubResource("QuadMesh_1io6o")
skeleton = NodePath("../../FrontOfHouse")

[node name="Wall_5" type="MeshInstance3D" parent="BackOfHouse"]
transform = Transform3D(1, -1.52855e-14, -1.74845e-07, 0, -1, 8.74228e-08, -1.74845e-07, -8.74228e-08, -1, 3, 2.5, 5)
mesh = SubResource("QuadMesh_1io6o")
skeleton = NodePath("../../FrontOfHouse")

[node name="TeaProducingLabel" type="Label3D" parent="BackOfHouse"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -4.7716, 2.18095, 0.614768)
text = "Making a Tea Brick:
- Pluck leaves
- Use Tea Crusher
- Use Tea Oxidizer to make green or black tea"

[node name="Counter" parent="BackOfHouse" instance=ExtResource("23_up8mt")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 2.37305, 0, 3.57072)

[node name="Counter2" parent="BackOfHouse" instance=ExtResource("23_up8mt")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 2.37305, 0, 2.51411)

[node name="Counter3" parent="BackOfHouse" instance=ExtResource("23_up8mt")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 2.39866, 0, 1.47916)

[node name="Counter_4" parent="BackOfHouse" instance=ExtResource("8_y4nji")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -4.5, 0, 4.5)

[node name="Hallway" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -5)

[node name="Floor" type="MeshInstance3D" parent="Hallway"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.5)
mesh = SubResource("QuadMesh_efst4")

[node name="Ceiling" type="MeshInstance3D" parent="Hallway"]
transform = Transform3D(-1, 8.74228e-08, 0, -8.74228e-08, -1, 0, 0, 0, 1, 0, 3, -0.5)
mesh = SubResource("QuadMesh_efst4")

[node name="Wall1" type="MeshInstance3D" parent="Hallway"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 2.5, -0.5)
mesh = SubResource("QuadMesh_5ks6k")

[node name="Wall2" type="MeshInstance3D" parent="Hallway"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 1, 2.5, -0.5)
mesh = SubResource("QuadMesh_5ks6k")

[node name="Teapot" parent="." instance=ExtResource("6_rjdbd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 1, -4.5)

[node name="TeaCup" parent="." instance=ExtResource("7_72l4u")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 1, -4.421)

[node name="TeaKettle" parent="." instance=ExtResource("8_7hc52")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3.5, 1, -4.575)

[node name="TeaTree" parent="." instance=ExtResource("9_5djjh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.5, 0, -9.75)

[node name="TeaTree2" parent="." instance=ExtResource("9_5djjh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.5, 0, -7.5)

[node name="TeaTree3" parent="." instance=ExtResource("9_5djjh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.5, 0, -8.25)

[node name="TeaTree4" parent="." instance=ExtResource("9_5djjh")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.5, 0, -9)

[node name="LeafCrusher" parent="." instance=ExtResource("10_nefb5")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -2.5, 0, -12.5)
obj_leaf_tray = ExtResource("16_371e4")

[node name="LeafCrusher2" parent="." instance=ExtResource("10_nefb5")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -1.5, 0, -12.5)
obj_leaf_tray = ExtResource("16_371e4")

[node name="Oxidizer" parent="." instance=ExtResource("11_kmpjb")]
transform = Transform3D(1, 0, 1.06581e-14, 0, 1, 0, -1.06581e-14, 0, 1, -0.5, 0, -12.5)

[node name="Oxidizer2" parent="." instance=ExtResource("11_kmpjb")]
transform = Transform3D(1, 0, 1.06581e-14, 0, 1, 0, -1.06581e-14, 0, 1, 0.5, 0, -12.5)

[node name="LeafBasket" parent="." instance=ExtResource("17_lh7w1")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -4.4811, 1, -6.49011)

[node name="Jukebox" parent="." instance=ExtResource("17_28vpb")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4, 0, 4)

[node name="Ingredient" parent="." instance=ExtResource("20_6w77y")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.34413, 0.893563, -8.75)
item_type = null
ingredient = 3
color_ingredient = null

[node name="Ingredient2" parent="." instance=ExtResource("20_6w77y")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0.906678, -7.75)
item_type = null
ingredient = 4
color_ingredient = null

[node name="Ingredient3" parent="." instance=ExtResource("20_6w77y")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.5, 0.890502, -8.25)
item_type = null
ingredient = 5
color_ingredient = null

[connection signal="changeHeldItem" from="Player" to="HUD/Control/Label_HeldItem" method="onLabelUpdate"]
[connection signal="changePingLabel" from="Player" to="HUD/Control/MousePeek/PingLabel" method="onLabelUpdate"]
[connection signal="changeUseLabel" from="Player" to="HUD/Control/MousePeek/UseLabel" method="onLabelUpdate"]
